--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ crash.log
 # control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 *.tfvars
-
+.terraform.lock.hcl
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
